2006-11-09  Ingo Proetel  <proetel@aicas.com>
2006-11-09  Roman Kennke  <kennke@aicas.com>

	* gnu/java/awt/peer/swing/SwingButtonPeer.java
	(SwingButton.button): New field.
	(SwingButton.SwingButton): Added constructor.
	(SwingButton.isShowing): Access button field instead of
	the surrounding class.
	(SwingButton.getParent): Access button field instead of
	the surrounding class.
	(SwingButtonPeer): Call new SwingButton constructor.
	* gnu/java/awt/peer/swing/SwingComponent.java:
	Several documentation updates.
	* gnu/java/awt/peer/swing/SwingComponentPeer.java
	(currentPaintEvents): New field.
	(peerFont): New field.
	(SwingComponentPeer): Initialize currentPaintEvents fields.
	(coalescePaintEvents): Implemented.
	(dispose): Unregister peer from heavyweight list of its container.
	(getGraphics): Fetch graphics from parent component.
	(handleEvent): Discard paint event if its coalesced.
	(init): Register component with its container for proper painting.
	(paint): Call peerPaint().
	(peerPaint): Added argument that indicates if we should update.
	Call paint or update on the actual AWT component.
	(peerPaintComponent): New method. Paints the peer (Swing) component.
	(setFont): Set peerFont field.
	* gnu/java/awt/peer/swing/SwingContainerPeer.java
	(backbuffer): New field.
	(focusOwner): New field.
	(heavyweightDescendents): New field.
	(SwingContainerPeer): Take Container as argument. Don't call init
	yet.
	(addHeavyweightDescendent): New method.
	(getFocusOwner): New helper method.
	(getInsets): Delegate to insets().
	(handleKeyEvent): Dispatch event to focus owner.
	(handleMouseEvent): Dispatch to child component.
	(isDoubleBuffering): New helper method.
	(peerPaint): Overridden to implement container painting with
	double buffering.
	(peerPaintChildren): New method. Paints the descendents of this
	container.
	(removeHeavyweightDescendent): New helper method.	
	* gnu/java/awt/peer/swing/SwingFramePeer.java
	(peerPaint): Removed.